[package]
name = "rustpicoblink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cortex-m = "0.7.7
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rtt-target = "0.6.1"
# rp-pico = "0.9.0"
# rp2040-pac = "0.6.0"
rp2040-pac = { version = "0.6.0", features = ["rt", "critical-section"] }
embedded-hal = "1.0.0"
rp2040-hal = "0.11.0"
# rtt-target = "0.5.0"
